fixed exec popup overflow

--- a/src/screens/Exec/PaginationTable.module.css
+++ b/src/screens/Exec/PaginationTable.module.css
@@ -50,6 +50,7 @@
 
 .TableContainer::-webkit-scrollbar {
   width: 6px;
+  height: 6px;
 }
 
 .TableContainer::-webkit-scrollbar-thumb {
